Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <section class="main-content">
       <p>This is a humble attempt to build a GUI around bower. At it's core it lives from the the bower terminal command line tool. Reading the output that you'd see in the terminal and converting it to a graphical interface.</p>
 
+<p><img src="https://raw.githubusercontent.com/Enie/Bower-UI/gh-pages/images/BowerUI.png" alt="Screenshot"></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Enie/Bower-UI">Bower-ui</a> is maintained by <a href="https://github.com/Enie">Enie</a>.</span>
 
