--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p>This is a humble attempt to build a GUI around bower. At it's core it lives from the the bower terminal command line tool. Reading the output that you'd see in the terminal and converting it to a graphical interface.</p>
+      <p>This is a humble attempt to build a GUI around bower. At it's core it lives from the bower terminal command line tool. Reading the output that you'd see in the terminal and converting it to a graphical interface.</p>
 
 <p><img src="https://raw.githubusercontent.com/Enie/Bower-UI/gh-pages/images/BowerUI.png" alt="Screenshot"></p>
 
